--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -25,108 +25,33 @@
     <!-- Start Our Work -->
     <section class="container py-5">
         <div class="row justify-content-center my-5">
-            <div class="filter-btns shadow-md rounded-pill text-center col-auto">
-                <a class="filter-btn btn rounded-pill btn-outline-primary border-0 m-md-2 px-md-4 active" data-filter=".project" href="#">All</a>
-                <a class="filter-btn btn rounded-pill btn-outline-primary border-0 m-md-2 px-md-4" data-filter=".business" href="#">Business</a>
-                <a class="filter-btn btn rounded-pill btn-outline-primary border-0 m-md-2 px-md-4" data-filter=".marketing" href="#">Marketing</a>
-                <a class="filter-btn btn rounded-pill btn-outline-primary border-0 m-md-2 px-md-4" data-filter=".social" href="#">Social Media</a>
-                <a class="filter-btn btn rounded-pill btn-outline-primary border-0 m-md-2 px-md-4" data-filter=".graphic" href="#">Graphic</a>
-            </div>
+            <!-- <div class="filter-btns shadow-md rounded-pill text-center col-auto">
+                {%for cat in posts.category %}
+                <a href="{%url 'blog:category' cat_name=cat.name%}">{{cat.name}}</a>
+                <a class="filter-btn btn rounded-pill btn-outline-primary border-0 m-md-2 px-md-4" data-filter=".graphic" href="#">Graphic</a> 
+                {%endfor%}
+            </div>  -->
         </div>
 
         <div class="row projects gx-lg-5">
+            {%for post in posts%}
             <a href="{%url 'blog:single'%}" class="col-sm-6 col-lg-4 text-decoration-none project marketing social business">
                 <div class="service-work overflow-hidden card mb-5 mx-5 m-sm-0">
-                    <img class="card-img-top" src="{%static './assets/img/our-work-01.jpg'%}" alt="...">
+                    <img class="card-img-top" src="{{ post.image.url }}" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title light-300 text-dark">Digital Marketing</h5>
-                        <p class="card-text light-300 text-dark">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolor.
-                        </p>
+                        <h5 class="card-title light-300 text-dark" dir="rtl">{{post.title}}</h5>
+                        <p class="card-text light-300 text-dark" dir="rtl">{{ post.content|truncatewords:8}}</p>
+                        <p class="card-text light-300 text-dark">{{post.published_date|date:"d M Y"}}</p>
                         <span class="text-decoration-none text-primary light-300">
-                              Read more <i class='bx bxs-hand-right ms-1'></i>
+                              ادامه مطلب <i class='bx bxs-hand-right ms-1'></i>
                           </span>
                     </div>
                 </div>
             </a>
-            <a href="{%url 'blog:single'%}" class="col-sm-6 col-lg-4 text-decoration-none project graphic social">
-                <div class="service-work overflow-hidden card mx-5 mx-sm-0 mb-5">
-                    <img class="card-img-top" src="{%static './assets/img/our-work-02.jpg'%}" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title light-300 text-dark">Corporate Branding</h5>
-                        <p class="card-text light-300 text-dark">
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                        <span class="text-decoration-none text-primary light-300">
-                              Read more <i class='bx bxs-hand-right ms-1'></i>
-                          </span>
-                    </div>
-                </div>
-            </a>
-            <a href="{%url 'blog:single'%}" class="col-sm-6 col-lg-4 text-decoration-none project marketing graphic business">
-                <div class="service-work overflow-hidden card mx-5 mx-sm-0 mb-5">
-                    <img class="card-img-top" src="{%static './assets/img/our-work-03.jpg'%}" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title light-300 text-dark">Leading Digital Solution</h5>
-                        <p class="card-text light-300 text-dark">
-                            Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse cillum dolore eu fugiatdolore eu fugiat nulla pariatur.
-                        </p>
-                        <span class="text-decoration-none text-primary light-300">
-                              Read more <i class='bx bxs-hand-right ms-1'></i>
-                          </span>
-                    </div>
-                </div>
-            </a>
-            <a href="{%url 'blog:single'%}" class="col-sm-6 col-lg-4 text-decoration-none project social business">
-                <div class="service-work overflow-hidden card mx-5 mx-sm-0 mb-5">
-                    <img class="card-img-top" src="{%static './assets/img/our-work-04.jpg'%}" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title light-300 text-dark">Smart Applications</h5>
-                        <p class="card-text light-300 text-dark">
-                            Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <span class="text-decoration-none text-primary light-300">
-                              Read more <i class='bx bxs-hand-right ms-1'></i>
-                          </span>
-                    </div>
-                </div>
-            </a>
-            <a href="{%url 'blog:single'%}" class="col-sm-6 col-lg-4 text-decoration-none project marketing">
-                <div class="service-work overflow-hidden card mx-5 mx-sm-0 mb-5">
-                    <img class="card-img-top" src="{%static './assets/img/our-work-05.jpg'%}" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title light-300 text-dark">Corporate Stationary</h5>
-                        <p class="card-text light-300 text-dark">
-                            Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                        <span class="text-decoration-none text-primary light-300">
-                              Read more <i class='bx bxs-hand-right ms-1'></i>
-                          </span>
-                    </div>
-                </div>
-            </a>
-            <a href="{%url 'blog:single'%}" class="col-sm-6 col-lg-4 text-decoration-none project marketing graphic">
-                <div class="service-work overflow-hidden card mx-5 mx-sm-0 mb-5">
-                    <img class="card-img-top" src="{%static './assets/img/our-work-06.jpg'%}" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title light-300 text-dark">8 Financial Tips</h5>
-                        <p class="card-text light-300 text-dark">
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                        <span class="text-decoration-none text-primary light-300">
-                              Read more <i class='bx bxs-hand-right ms-1'></i>
-                          </span>
-                    </div>
-                </div>
-            </a>
+            {%endfor%}
         </div>
-        <div class="row">
+        <!-- <div class="row">
+			
             <div class="btn-toolbar justify-content-center pb-4" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group me-2" role="group" aria-label="First group">
                     <button type="button" class="btn btn-secondary text-white">Previous</button>
@@ -140,47 +65,34 @@
                 <div class="btn-group" role="group" aria-label="Third group">
                     <button type="button" class="btn btn-secondary text-white">Next</button>
                 </div>
+            </div> -->
+            <div class="btn-toolbar justify-content-center pb-4" role="toolbar" aria-label="Toolbar with button groups">
+                {% if posts.has_previous %}
+                <div class="btn-group me-2" role="group" aria-label="First group">
+                    <a href="?page={{posts.previos_page_number}}" class="page-link" aria-label="Previous">
+                        <button type="button" class="btn btn-secondary text-white">Previous</button>
+                    </a>
+                </div>
+                {%endif%}
+                {%for i in posts.paginator.page_range%}
+                {% if posts.number == i %}
+                <button class="btn-secondary text-white"><a href="?page={{i}}" class="page-link">{{i}}</a></button>
+                    {%else%}
+                    <button type="button" class="btn btn-light "><a href="?page={{i}}" class="page-link">{{i}}</a></button>
+                
+                {%endif%}
+                {%endfor%}
+                {%if posts.has_next %}
+                    <a href="?page={{posts.next_page_number}}" class="page-link" aria-label="Next">
+                        <button type="button" class="btn btn-secondary text-white">Next</button>
+                    </a>
+                </div>
+                {%endif%}
             </div>
+            
         </div>
     </section>
     <!-- End Our Work -->
 
-    <!-- Start Feature Work -->
-    <section class="bg-light py-5">
-        <div class="feature-work container my-4">
-            <div class="row d-flex d-flex align-items-center">
-                <div class="col-lg-5">
-                    <h3 class="feature-work-title h4 text-muted light-300">Featured Work</h3>
-                    <h1 class="feature-work-heading h2 py-3 semi-bold-600">Transform with us</h1>
-                    <p class="feature-work-body text-muted light-300">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse
-                        ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-                    </p>
-                    <p class="feature-work-footer text-muted light-300">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur.</p>
-                </div>
-                <div class="col-lg-6 offset-lg-1 align-left">
-                    <div class="row">
-                        <a class="col" data-type="image" data-fslightbox="gallery" href="{%static './assets/img/feature-work-1-large.jpg'%}">
-                            <img class="img-fluid" src="{%static './assets/img/feature-work-1.jpg'%}">
-                        </a>
-                        <a class="col" data-type="image" data-fslightbox="gallery" href="{%static './assets/img/feature-work-2-large.jpg'%}">
-                            <img class="img-fluid" src="{%static './assets/img/feature-work-2.jpg'%}">
-                        </a>
-                    </div>
-                    <div class="row pt-4">
-                        <a class="col" data-type="image" data-fslightbox="gallery" href="{%static './assets/img/feature-work-3-large.jpg'%}">
-                            <img class="img-fluid" src="{%static './assets/img/feature-work-3.jpg'%}">
-                        </a>
-                        <a class="col" data-type="image" data-fslightbox="gallery" href="{%static './assets/img/feature-work-4-large.jpg'%}">
-                            <img class="img-fluid" src="{%static './assets/img/feature-work-4.jpg'%}">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End Feature Work -->
 
 {%endblock%}
